增加了 创建文章的接口   在获取文章接口的基础上加了获取总数量
